ensure pretty text wrap

--- a/style.css
+++ b/style.css
@@ -229,6 +229,7 @@ main {
 
 .announcement-item>.text {
     color: var(--dark-grey-colour);
+    text-wrap: pretty;
 }
 
 .trending {
